# pdf_bot

./: .gitignore  Dockerfile  commands.py  config.py  main.py  pyproject.toml  setup.cfg
tests/: test_commands.py
