[tool.poetry]
name = "pdf-bot"
version = "0.1.0"
description = ""
authors = ["alexander.evseev <alexandr.evseev@balance-pl.ru>"]
readme = "README.md"
packages = [{include = "pdf_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.2"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
